--- a/cartuning/webapp/html/maintain.html
+++ b/cartuning/webapp/html/maintain.html
@@ -4,14 +4,13 @@
 <title>The Auto-Tuning Website Template | Maintains :: </title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<link href='http://fonts.useso.com/css?family=Anaheim' rel='stylesheet' type='text/css'>
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+<link href="http://localhost:8080/cartuning/css/style.css" rel="stylesheet" type="text/css" media="all" />
 </head>
 <body>
 <div class="wrap">
   <div class="header">
     <div class="logo">
-      <h1><a href="index.html"><img src="images/logo.png" alt=""></a></h1>
+      <h1><a href="http://localhost:8080/cartuning/index.jsp"><img src="http://localhost:8080/cartuning/images/logo.png" alt=""></a></h1>
     </div>
     <div class="h_right">
       <div class="drp-dwn">
@@ -39,9 +38,9 @@
         </ul>
       </div>
       <div class="header_top_right">
-        <div class="login"> <span><a href="login.html"><img src="images/login.png" alt="" title="login"></a></span> </div>
+        <div class="login"> <span><a href="http://localhost:8080/cartuning/html/login.html"><img src="http://localhost:8080/cartuning/images/login.png" alt="" title="login"></a></span> </div>
         <div class="shopping_cart">
-          <div class="cart_img"> <img src="images/header_cart.png"> </div>
+          <div class="cart_img"> <img src="http://localhost:8080/cartuning/images/header_cart.png"> </div>
           <div class="cart"> <a href="#" title="View my shopping cart" rel="nofollow"> <span class="cart_title">Cart</span> <span class="no_product">(empty)</span> </a> </div>
         </div>
         <div class="clear"></div>
@@ -50,7 +49,7 @@
     <div class="clear"></div>
     <div class="h_main">
       <ul class="nav">
-        <li class="active"><a href="index.html">Home</a></li>
+        <li class="active"><a href="http://localhost:8080/cartuning/index.jsp">Home</a></li>
         <li><a href="maintain.html">Maintains</a></li>
         <li><a href="repair.html">Repairs</a></li>
         <li><a href="contact.html">Contact</a></li>
@@ -68,7 +67,7 @@
     <div class="main1">
       <h2 class="hdr_s">Why us importance of maintaince</h2>
       <div class="image group">
-        <div class="images_2_of_2"> <a href="details.html"> <img src="images/8.jpg" alt=""></a> </div>
+        <div class="images_2_of_2"> <a href="http://localhost:8080/cartuning/html/details.html"> <img src="http://localhost:8080/cartuning/images/8.jpg" alt=""></a> </div>
         <div class="span_2_of_2">
           <h3>Lorem Ipsum is simply dummy text </h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
@@ -78,22 +77,22 @@
         <div class="clear"></div>
       </div>
       <div class="image group">
-        <div class="images_2_of_2"> <a href="details.html"> <img src="images/2.jpg" alt=""></a> </div>
+        <div class="images_2_of_2"> <a href="http://localhost:8080/cartuning//html/details.html"> <img src="http://localhost:8080/cartuning/images/2.jpg" alt=""></a> </div>
         <div class="span_2_of_2">
           <h3>Lorem Ipsum is simply dummy text </h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          <div class="rd_more"> <a href="details.html" class="button button-rounded">Read More</a> </div>
+          <div class="rd_more"> <a href="http://localhost:8080/cartuning/html/details.html" class="button button-rounded">Read More</a> </div>
         </div>
         <div class="clear"></div>
       </div>
       <div class="image group1">
-        <div class="images_2_of_2"> <a href="details.html"> <img src="images/3.jpg" alt=""></a> </div>
+        <div class="images_2_of_2"> <a href="http://localhost:8080/cartuning/html/details.html"> <img src="http://localhost:8080/cartuning/images/3.jpg" alt=""></a> </div>
         <div class="span_2_of_2">
           <h3>Lorem Ipsum is simply dummy text </h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          <div class="rd_more"> <a href="details.html" class="button button-rounded">Read More</a> </div>
+          <div class="rd_more"> <a href="http://localhost:8080/cartuning/html/details.html" class="button button-rounded">Read More</a> </div>
         </div>
         <div class="clear"></div>
       </div>
@@ -111,15 +110,15 @@
         </ul>
       </div>
       <div class="copy">
-        <p class="w3-link">© All Rights Reserved | More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a> </p>
+        <p class="w3-link">© All Rights Reserved <a href="#" target="_self" title="">cartuning</a></p>
       </div>
     </div>
     <div class="social-icons">
       <ul>
-        <li class="icon1"><a href="#" target="_blank"> </a></li>
-        <li class="icon2"><a href="#" target="_blank"> </a></li>
-        <li class="icon3"><a href="#" target="_blank"> </a></li>
-        <li class="icon4"><a href="#" target="_blank"> </a></li>
+        <li class="icon1"><a href="#" target="_self"> </a></li>
+        <li class="icon2"><a href="#" target="_self"> </a></li>
+        <li class="icon3"><a href="#" target="_self"> </a></li>
+        <li class="icon4"><a href="#" target="_self"> </a></li>
         <div class="clear"></div>
       </ul>
     </div>
