--- a/cartuning/webapp/html/contact.html
+++ b/cartuning/webapp/html/contact.html
@@ -4,14 +4,13 @@
 <title>The Auto-Tuning Website Template | Contact :: </title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<link href='http://fonts.useso.com/css?family=Anaheim' rel='stylesheet' type='text/css'>
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+<link href="http://localhost:8080/cartuning/css/style.css" rel="stylesheet" type="text/css" media="all" />
 </head>
 <body>
 <div class="wrap">
   <div class="header">
     <div class="logo">
-      <h1><a href="index.html"><img src="images/logo.png" alt=""></a></h1>
+      <h1><a href="http://localhost:8080/cartuning/index.jsp"><img src="http://localhost:8080/cartuning/images/logo.png" alt=""></a></h1>
     </div>
     <div class="h_right">
       <div class="drp-dwn">
@@ -39,9 +38,9 @@
         </ul>
       </div>
       <div class="header_top_right">
-        <div class="login"> <span><a href="login.html"><img src="images/login.png" alt="" title="login"></a></span> </div>
+        <div class="login"> <span><a href="http://localhost:8080/cartuning/html/login.html"><img src="http://localhost:8080/cartuning/images/login.png" alt="" title="login"></a></span> </div>
         <div class="shopping_cart">
-          <div class="cart_img"> <img src="images/header_cart.png"> </div>
+          <div class="cart_img"> <img src="http://localhost:8080/cartuning/images/header_cart.png"> </div>
           <div class="cart"> <a href="#" title="View my shopping cart" rel="nofollow"> <span class="cart_title">Cart</span> <span class="no_product">(empty)</span> </a> </div>
         </div>
         <div class="clear"></div>
@@ -50,7 +49,7 @@
     <div class="clear"></div>
     <div class="h_main">
       <ul class="nav">
-        <li class="active"><a href="index.html">Home</a></li>
+        <li class="active"><a href="http://localhost:8080/cartuning/index.jsp">Home</a></li>
         <li><a href="maintain.html">Maintains</a></li>
         <li><a href="repair.html">Repairs</a></li>
         <li><a href="contact.html">Contact</a></li>
@@ -71,9 +70,9 @@
           <div class="contact_info">
             <h3>Find Us Here</h3>
             <div class="map">
-              <iframe width="100%" height="175" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.co.in/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Lighthouse+Point,+FL,+United+States&amp;aq=4&amp;oq=light&amp;sll=26.275636,-80.087265&amp;sspn=0.04941,0.104628&amp;ie=UTF8&amp;hq=&amp;hnear=Lighthouse+Point,+Broward,+Florida,+United+States&amp;t=m&amp;z=14&amp;ll=26.275636,-80.087265&amp;output=embed"></iframe>
+              <iframe width="100%" height="175" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="#"></iframe>
               <br>
-              <small><a href="https://maps.google.co.in/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Lighthouse+Point,+FL,+United+States&amp;aq=4&amp;oq=light&amp;sll=26.275636,-80.087265&amp;sspn=0.04941,0.104628&amp;ie=UTF8&amp;hq=&amp;hnear=Lighthouse+Point,+Broward,+Florida,+United+States&amp;t=m&amp;z=14&amp;ll=26.275636,-80.087265" style="color: #5A5A5A;text-align:left;font-size:12px">View Larger Map</a></small> </div>
+              <small><a href="#" style="color: #5A5A5A;text-align:left;font-size:12px">View Larger Map</a></small> </div>
           </div>
           <div class="company_address">
             <h3>Company Information :</h3>
@@ -132,15 +131,15 @@
         </ul>
       </div>
       <div class="copy">
-        <p class="w3-link">© All Rights Reserved | More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a> </p>
+        <p class="w3-link">© All Rights Reserved<a href="#" target="_self" title=""> cartuning</a></p>
       </div>
     </div>
     <div class="social-icons">
       <ul>
-        <li class="icon1"><a href="#" target="_blank"> </a></li>
-        <li class="icon2"><a href="#" target="_blank"> </a></li>
-        <li class="icon3"><a href="#" target="_blank"> </a></li>
-        <li class="icon4"><a href="#" target="_blank"> </a></li>
+        <li class="icon1"><a href="#" target="_self"> </a></li>
+        <li class="icon2"><a href="#" target="_self"> </a></li>
+        <li class="icon3"><a href="#" target="_self"> </a></li>
+        <li class="icon4"><a href="#" target="_self"> </a></li>
         <div class="clear"></div>
       </ul>
     </div>
