--- a/cartuning/webapp/html/details.html
+++ b/cartuning/webapp/html/details.html
@@ -4,20 +4,19 @@
 <title>The Auto-Tuning Website Template | Details :: </title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<link href='http://fonts.useso.com/css?family=Anaheim' rel='stylesheet' type='text/css'>
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+<link href="http://localhost:8080/cartuning/css/style.css" rel="stylesheet" type="text/css" media="all" />
 <!--image slider-->
-<script type="text/javascript" src="js/jquery-1.7.2.min.js"></script>
-<script src="js/jquery-slider.js" type="text/javascript"></script>
-<script src="js/easyResponsiveTabs.js" type="text/javascript"></script>
-<link href="css/easy-responsive-tabs.css" rel="stylesheet" type="text/css" media="all"/>
-<link rel="stylesheet" href="css/global.css">
-<script src="js/slides.min.jquery.js"></script>
+<script type="text/javascript" src="http://localhost:8080/cartuning/js/jquery-1.7.2.min.js"></script>
+<script src="http://localhost:8080/cartuning/js/jquery-slider.js" type="text/javascript"></script>
+<script src="http://localhost:8080/cartuning/js/easyResponsiveTabs.js" type="text/javascript"></script>
+<link href="http://localhost:8080/cartuning/css/easy-responsive-tabs.css" rel="stylesheet" type="text/css" media="all"/>
+<link rel="stylesheet" href="http://localhost:8080/cartuning/css/global.css">
+<script src="http://localhost:8080/cartuning/js/slides.min.jquery.js"></script>
 <script>
 		$(function(){
 			$('#products').slides({
 				preload: true,
-				preloadImage: 'img/loading.gif',
+				preloadImage: 'http://localhost:8080/cartuning/images/loading.gif',
 				effect: 'slide, fade',
 				crossfade: true,
 				slideSpeed: 350,
@@ -32,7 +31,7 @@
 <div class="wrap">
   <div class="header">
     <div class="logo">
-      <h1><a href="index.html"><img src="images/logo.png" alt=""></a></h1>
+      <h1><a href="http://localhost:8080/cartuning/index.jsp"><img src="http://localhost:8080/cartuning/images/logo.png" alt=""></a></h1>
     </div>
     <div class="h_right">
       <div class="drp-dwn">
@@ -60,9 +59,9 @@
         </ul>
       </div>
       <div class="header_top_right">
-        <div class="login"> <span><a href="login.html"><img src="images/login.png" alt="" title="login"></a></span> </div>
+        <div class="login"> <span><a href="http://localhost:8080/cartuning/html/login.html"><img src="http://localhost:8080/cartuning/images/login.png" alt="" title="login"></a></span> </div>
         <div class="shopping_cart">
-          <div class="cart_img"> <img src="images/header_cart.png"> </div>
+          <div class="cart_img"> <img src="http://localhost:8080/cartuning/images/header_cart.png"> </div>
           <div class="cart"> <a href="#" title="View my shopping cart" rel="nofollow"> <span class="cart_title">Cart</span> <span class="no_product">(empty)</span> </a> </div>
         </div>
         <div class="clear"></div>
@@ -71,7 +70,7 @@
     <div class="clear"></div>
     <div class="h_main">
       <ul class="nav">
-        <li class="active"><a href="index.html">Home</a></li>
+        <li class="active"><a href="http://localhost:8080/cartuning/index.jsp">Home</a></li>
         <li><a href="maintain.html">Maintains</a></li>
         <li><a href="repair.html">Repairs</a></li>
         <li><a href="contact.html">Contact</a></li>
@@ -93,12 +92,17 @@
             <div id="container">
               <div id="products_example">
                 <div id="products">
-                  <div class="slides_container"> <a href="#" target="_blank"><img src="images/productslide-1.jpg" alt=" " /></a> <a href="#" target="_blank"><img src="images/productslide-2.jpg" alt=" " /></a> <a href="#" target="_blank"><img src="images/productslide-3.jpg" alt=" " /></a> <a href="#" target="_blank"><img src="images/productslide-4.jpg" alt=" " /></a> </div>
+                  <div class="slides_container"> 
+                  		<a href="#" target="_blank"><img src="http://localhost:8080/cartuning/images/productslide-1.jpg" alt=" " /></a> 
+                  		<a href="#" target="_blank"><img src="http://localhost:8080/cartuning/images/productslide-2.jpg" alt=" " /></a> 
+                  		<a href="#" target="_blank"><img src="http://localhost:8080/cartuning/images/productslide-3.jpg" alt=" " /></a> 
+                  		<a href="#" target="_blank"><img src="http://localhost:8080/cartuning/images/productslide-4.jpg" alt=" " /></a> 
+                  </div>
                   <ul class="pagination">
-                    <li><a href="#"><img src="images/d_pic1.jpg" alt=" " /></a></li>
-                    <li><a href="#"><img src="images/d_pic2.jpg" alt=" " /></a></li>
-                    <li><a href="#"><img src="images/d_pic3.jpg" alt=" " /></a></li>
-                    <li><a href="#"><img src="images/d_pic4.jpg" alt=" " /></a></li>
+                    <li><a href="#"><img src="http://localhost:8080/cartuning/images/d_pic1.jpg" alt=" " /></a></li>
+                    <li><a href="#"><img src="http://localhost:8080/cartuning/images/d_pic2.jpg" alt=" " /></a></li>
+                    <li><a href="#"><img src="http://localhost:8080/cartuning/images/d_pic3.jpg" alt=" " /></a></li>
+                    <li><a href="#"><img src="http://localhost:8080/cartuning/images/d_pic4.jpg" alt=" " /></a></li>
                   </ul>
                 </div>
               </div>
@@ -145,12 +149,16 @@
               <div class="share">
                 <p>Share Product :</p>
                 <ul>
-                  <li><a href="#"><img src="images/icon_1.png" alt=""></a></li>
-                  <li><a href="#"><img src="images/icon_2.png" alt=""></a></li>
-                  <li><a href="#"><img src="images/icon_3.png" alt=""></a></li>
+                  <li><a href="#"><img src="http://localhost:8080/cartuning/images/icon_1.png" alt=""></a></li>
+                  <li><a href="#"><img src="http://localhost:8080/cartuning/images/icon_2.png" alt=""></a></li>
+                  <li><a href="#"><img src="http://localhost:8080/cartuning/images/icon_3.png" alt=""></a></li>
                 </ul>
               </div>
-              <div class="button1"><span><a href="details.html" class="button button-rounded" >Add to Cart</a></span></div>
+              <div class="button1">
+              	<span>
+              		<a href="http://localhost:8080/cartuning/html/details.html" class="button button-rounded" >Add to Cart</a>
+              	</span>
+              </div>
               <div class="clear"></div>
             </div>
             <div class="wish-list">
@@ -190,9 +198,9 @@
               <div class="review resp-tab-content" aria-labelledby="tab_item-2">
                 <h4>Lorem ipsum Review by <a href="#">Finibus Bonorum</a></h4>
                 <ul>
-                  <li>Price :<a href="#"><img src="images/price-rating.png" alt=""></a></li>
-                  <li>Value :<a href="#"><img src="images/value-rating.png" alt=""></a></li>
-                  <li>Quality :<a href="#"><img src="images/quality-rating.png" alt=""></a></li>
+                  <li>Price :<a href="#"><img src="http://localhost:8080/cartuning/images/price-rating.png" alt=""></a></li>
+                  <li>Value :<a href="#"><img src="http://localhost:8080/cartuning/images/value-rating.png" alt=""></a></li>
+                  <li>Quality :<a href="#"><img src="http://localhost:8080/cartuning/images/quality-rating.png" alt=""></a></li>
                 </ul>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                 <div class="your-review">
@@ -237,7 +245,14 @@
             <h2>Lorem ipsum quis nostrud exercitation</h2>
           </div>
           <div class="div2">
-            <div id="mcts1"> <img src="images/d_pic2.jpg" alt=""/> <img src="images/d_pic1.jpg" alt="" /> <img src="images/d_pic3.jpg" alt="" /> <img src="images/d_pic4.jpg" alt=""/> <img src="images/d_pic1.jpg" alt="" /> <img src="images/d_pic4.jpg" alt="" /> </div>
+            <div id="mcts1"> 
+            	<img src="http://localhost:8080/cartuning/images/d_pic2.jpg" alt=""/> 
+            	<img src="http://localhost:8080/cartuning/images/d_pic1.jpg" alt="" /> 
+            	<img src="http://localhost:8080/cartuning/images/d_pic3.jpg" alt="" /> 
+            	<img src="http://localhost:8080/cartuning/images/d_pic4.jpg" alt=""/> 
+            	<img src="http://localhost:8080/cartuning/images/d_pic1.jpg" alt="" /> 
+            	<img src="http://localhost:8080/cartuning/images/d_pic4.jpg" alt="" />
+            </div>
           </div>
         </div>
       </div>
@@ -256,7 +271,7 @@
         </ul>
       </div>
       <div class="copy">
-        <p class="w3-link">© All Rights Reserved | More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a> </p>
+        <p class="w3-link">© All Rights Reserved<a href="#" target="_blank" title=""> cartuning </a></p>
       </div>
     </div>
     <div class="social-icons">
