--- a/cartuning/webapp/html/login.html
+++ b/cartuning/webapp/html/login.html
@@ -4,14 +4,13 @@
 <title>The Auto-Tuning Website Template | 404 :: </title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<link href='http://fonts.useso.com/css?family=Anaheim' rel='stylesheet' type='text/css'>
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+<link href="http://localhost:8080/cartuning/css/style.css" rel="stylesheet" type="text/css" media="all" />
 </head>
 <body>
 <div class="wrap">
   <div class="header">
     <div class="logo">
-      <h1><a href="index.html"><img src="images/logo.png" alt=""></a></h1>
+      <h1><a href="http://localhost:8080/cartuning/index.jsp"><img src="http://localhost:8080/cartuning/images/logo.png" alt=""></a></h1>
     </div>
     <div class="h_right">
       <div class="drp-dwn">
@@ -39,9 +38,9 @@
         </ul>
       </div>
       <div class="header_top_right">
-        <div class="login"> <span><a href="login.html"><img src="images/login.png" alt="" title="login"></a></span> </div>
+        <div class="login"> <span><a href="http://localhost:8080/cartuning/html/login.html"><img src="http://localhost:8080/cartuning/images/login.png" alt="" title="login"></a></span> </div>
         <div class="shopping_cart">
-          <div class="cart_img"> <img src="images/header_cart.png"> </div>
+          <div class="cart_img"> <img src="http://localhost:8080/cartuning/images/header_cart.png"> </div>
           <div class="cart"> <a href="#" title="View my shopping cart" rel="nofollow"> <span class="cart_title">Cart</span> <span class="no_product">(empty)</span> </a> </div>
         </div>
         <div class="clear"></div>
@@ -50,10 +49,10 @@
     <div class="clear"></div>
     <div class="h_main">
       <ul class="nav">
-        <li class="active"><a href="index.html">Home</a></li>
-        <li><a href="maintain.html">Maintains</a></li>
-        <li><a href="repair.html">Repairs</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li class="active"><a href="http://localhost:8080/cartuning/index.jsp">Home</a></li>
+        <li><a href="html/maintain.html">Maintains</a></li>
+        <li><a href="html/repair.html">Repairs</a></li>
+        <li><a href="html/contact.html">Contact</a></li>
       </ul>
       <div class="search">
         <form>
@@ -94,7 +93,7 @@
         </ul>
       </div>
       <div class="copy">
-        <p class="w3-link">© All Rights Reserved | More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a> </p>
+        <p class="w3-link">© All Rights Reserved | More Templates <a href="#" target="_blank" title=""></a></p>
       </div>
     </div>
     <div class="social-icons">
