--- a/cartuning/webapp/html/repair.html
+++ b/cartuning/webapp/html/repair.html
@@ -1,17 +1,16 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>The Auto-Tuning Website Template | Repair :: </title>
+<title>The Auto-Tuning Website | Repair :: </title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<link href='http://fonts.useso.com/css?family=Anaheim' rel='stylesheet' type='text/css'>
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+<link href="http://localhost:8080/cartuning/css/style.css" rel="stylesheet" type="text/css" media="all" />
 </head>
 <body>
 <div class="wrap">
   <div class="header">
     <div class="logo">
-      <h1><a href="index.html"><img src="images/logo.png" alt=""></a></h1>
+      <h1><a href="http://localhost:8080/cartuning/index.jsp"><img src="http://localhost:8080/cartuning/images/logo.png" alt=""></a></h1>
     </div>
     <div class="h_right">
       <div class="drp-dwn">
@@ -39,9 +38,9 @@
         </ul>
       </div>
       <div class="header_top_right">
-        <div class="login"> <span><a href="login.html"><img src="images/login.png" alt="" title="login"></a></span> </div>
+        <div class="login"> <span><a href="http://localhost:8080/cartuning/html/login.html"><img src="http://localhost:8080/cartuning/images/login.png" alt="" title="login"></a></span> </div>
         <div class="shopping_cart">
-          <div class="cart_img"> <img src="images/header_cart.png"> </div>
+          <div class="cart_img"> <img src="http://localhost:8080/cartuning/images/header_cart.png"> </div>
           <div class="cart"> <a href="#" title="View my shopping cart" rel="nofollow"> <span class="cart_title">Cart</span> <span class="no_product">(empty)</span> </a> </div>
         </div>
         <div class="clear"></div>
@@ -50,10 +49,10 @@
     <div class="clear"></div>
     <div class="h_main">
       <ul class="nav">
-        <li class="active"><a href="index.html">Home</a></li>
-        <li><a href="maintain.html">Maintains</a></li>
-        <li><a href="repair.html">Repairs</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li class="active"><a href="http://localhost:8080/cartuning/index.jsp">Home</a></li>
+        <li><a href="http://localhost:8080/cartuning/html/maintain.html">Maintains</a></li>
+        <li><a href="http://localhost:8080/cartuning/html/repair.html">Repairs</a></li>
+        <li><a href="http://localhost:8080/cartuning/html/contact.html">Contact</a></li>
       </ul>
       <div class="search">
         <form>
@@ -71,25 +70,25 @@
         <div class="repair">
           <section>
             <ul class="lb-album">
-              <li> <a href="#image-1"> <img src="images/r_pic1.jpg" alt=""> <span> </span> </a>
+              <li> <a href="#image-1"> <img src="http://localhost:8080/cartuning/images/r_pic1.jpg" alt=""> <span> </span> </a>
                 <div class="lb-overlay" id="image-1"> <img src="images/r_pic1.jpg" alt=""> <a href="#page" class="lb-close"> </a> </div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
-                <div class="rd_more"> <a href="details.html" class="button button-rounded">Read More</a> </div>
+                <div class="rd_more"> <a href="http://localhost:8080/cartuning/html/details.html" class="button button-rounded">Read More</a> </div>
               </li>
-              <li> <a href="#image-2"> <img src="images/r_pic2.jpg" alt=""> <span> </span> </a>
-                <div class="lb-overlay" id="image-2"> <img src="images/r_pic2.jpg" alt=""> <a href="#page" class="lb-close"> </a> </div>
+              <li> <a href="#image-2"> <img src="http://localhost:8080/cartuning/images/r_pic2.jpg" alt=""> <span> </span> </a>
+                <div class="lb-overlay" id="image-2"> <img src="http://localhost:8080/cartuning/images/r_pic2.jpg" alt=""> <a href="#page" class="lb-close"> </a> </div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
-                <div class="rd_more"> <a href="details.html" class="button button-rounded">Read More</a> </div>
+                <div class="rd_more"> <a href="http://localhost:8080/cartuning/html/details.html" class="button button-rounded">Read More</a> </div>
               </li>
-              <li> <a href="#image-3"> <img src="images/r_pic3.jpg" alt=""> <span> </span> </a>
-                <div class="lb-overlay" id="image-3"> <img src="images/r_pic3.jpg" alt="image03"> <a href="#page" class="lb-close"> </a> </div>
+              <li> <a href="#image-3"> <img src="http://localhost:8080/cartuning/images/r_pic3.jpg" alt=""> <span> </span> </a>
+                <div class="lb-overlay" id="image-3"> <img src="http://localhost:8080/cartuning/images/r_pic3.jpg" alt="image03"> <a href="#page" class="lb-close"> </a> </div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
-                <div class="rd_more"> <a href="details.html" class="button button-rounded">Read More</a> </div>
+                <div class="rd_more"> <a href="http://localhost:8080/cartuning/html/details.html" class="button button-rounded">Read More</a> </div>
               </li>
               <li> <a href="#image-4"> <img src="images/r_pic4.jpg" alt=""> <span> </span> </a>
-                <div class="lb-overlay" id="image-4"> <img src="images/r_pic4.jpg" alt="image04"> <a href="#page" class="lb-close"> </a> </div>
+                <div class="lb-overlay" id="image-4"> <img src="http://localhost:8080/cartuning/images/r_pic4.jpg" alt="image04"> <a href="#page" class="lb-close"> </a> </div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
-                <div class="rd_more"> <a href="details.html" class="button button-rounded">Read More</a> </div>
+                <div class="rd_more"> <a href="http://localhost:8080/cartuning/details.html" class="button button-rounded">Read More</a> </div>
               </li>
             </ul>
           </section>
@@ -97,25 +96,25 @@
         <div class="repair">
           <section>
             <ul class="lb-album">
-              <li> <a href="#image-5"> <img src="images/r_pic5.jpg" alt=""> <span> </span> </a>
-                <div class="lb-overlay" id="image-5"> <img src="images/r_pic5.jpg" alt="image05"> <a href="#page" class="lb-close"> </a> </div>
+              <li> <a href="#image-5"> <img src="http://localhost:8080/cartuning/images/r_pic5.jpg" alt=""> <span> </span> </a>
+                <div class="lb-overlay" id="image-5"> <img src="http://localhost:8080/cartuning/images/r_pic5.jpg" alt="image05"> <a href="#page" class="lb-close"> </a> </div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
-                <div class="rd_more"> <a href="details.html" class="button button-rounded">Read More</a> </div>
+                <div class="rd_more"> <a href="http://localhost:8080/cartuning/html/details.html" class="button button-rounded">Read More</a> </div>
               </li>
-              <li> <a href="#image-6"> <img src="images/r_pic6.jpg" alt=""> <span> </span> </a>
-                <div class="lb-overlay" id="image-6"> <img src="images/r_pic6.jpg" alt="image06"> <a href="#page" class="lb-close"> </a> </div>
+              <li> <a href="#image-6"> <img src="http://localhost:8080/cartuning/images/r_pic6.jpg" alt=""> <span> </span> </a>
+                <div class="lb-overlay" id="image-6"> <img src="http://localhost:8080/cartuning/images/r_pic6.jpg" alt="image06"> <a href="#page" class="lb-close"> </a> </div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
-                <div class="rd_more"> <a href="details.html" class="button button-rounded">Read More</a> </div>
+                <div class="rd_more"> <a href="http://localhost:8080/cartuning/html/details.html" class="button button-rounded">Read More</a> </div>
               </li>
-              <li> <a href="#image-7"> <img src="images/r_pic7.jpg" alt=""> <span> </span> </a>
-                <div class="lb-overlay" id="image-7"> <img src="images/r_pic7.jpg" alt="image07"> <a href="#page" class="lb-close"> </a> </div>
+              <li> <a href="#image-7"> <img src="http://localhost:8080/cartuning/images/r_pic7.jpg" alt=""> <span> </span> </a>
+                <div class="lb-overlay" id="image-7"> <img src="http://localhost:8080/cartuning/images/r_pic7.jpg" alt="image07"> <a href="#page" class="lb-close"> </a> </div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
-                <div class="rd_more"> <a href="details.html" class="button button-rounded">Read More</a> </div>
+                <div class="rd_more"> <a href="http://localhost:8080/cartuning/html/details.html" class="button button-rounded">Read More</a> </div>
               </li>
-              <li> <a href="#image-8"> <img src="images/r_pic8.jpg" alt=""> <span> </span> </a>
-                <div class="lb-overlay" id="image-8"> <img src="images/r_pic8.jpg" alt="image08"> <a href="#page" class="lb-close"> </a> </div>
+              <li> <a href="#image-8"> <img src="http://localhost:8080/cartuning/images/r_pic8.jpg" alt=""> <span> </span> </a>
+                <div class="lb-overlay" id="image-8"> <img src="http://localhost:8080/cartuning/images/r_pic8.jpg" alt="image08"> <a href="#page" class="lb-close"> </a> </div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
-                <div class="rd_more"> <a href="details.html" class="button button-rounded">Read More</a> </div>
+                <div class="rd_more"> <a href="http://localhost:8080/cartuning/html/details.html" class="button button-rounded">Read More</a> </div>
               </li>
               <div class="clear"></div>
             </ul>
@@ -135,15 +134,15 @@
         </ul>
       </div>
       <div class="copy">
-        <p class="w3-link">© All Rights Reserved | More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a> </p>
+        <p class="w3-link">© All Rights Reserved<a href="#" target="_self" title="">cartuning</a></p>
       </div>
     </div>
     <div class="social-icons">
       <ul>
-        <li class="icon1"><a href="#" target="_blank"> </a></li>
-        <li class="icon2"><a href="#" target="_blank"> </a></li>
-        <li class="icon3"><a href="#" target="_blank"> </a></li>
-        <li class="icon4"><a href="#" target="_blank"> </a></li>
+        <li class="icon1"><a href="#" target="_self"> </a></li>
+        <li class="icon2"><a href="#" target="_self"> </a></li>
+        <li class="icon3"><a href="#" target="_self"> </a></li>
+        <li class="icon4"><a href="#" target="_self"> </a></li>
         <div class="clear"></div>
       </ul>
     </div>
