--- a/cartuning/webapp/html/login.html
+++ b/cartuning/webapp/html/login.html
@@ -50,9 +50,9 @@
     <div class="h_main">
       <ul class="nav">
         <li class="active"><a href="http://localhost:8080/cartuning/index.jsp">Home</a></li>
-        <li><a href="html/maintain.html">Maintains</a></li>
-        <li><a href="html/repair.html">Repairs</a></li>
-        <li><a href="html/contact.html">Contact</a></li>
+        <li><a href="http://localhost:8080/cartuning/html/maintain.html">Maintains</a></li>
+        <li><a href="http://localhost:8080/cartuning/html/repair.html">Repairs</a></li>
+        <li><a href="http://localhost:8080/cartuning/html/contact.html">Contact</a></li>
       </ul>
       <div class="search">
         <form>
