--- a/cartuning/webapp/html/test.html
+++ b/cartuning/webapp/html/test.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" /> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
   <link rel="shortcut icon" href="http://localhost:8080/cartuning/themes/favicon.ico" /> 
-  <title>南京工程学院图书馆</title> 
+  <title>图书馆</title> 
   <script src="http://localhost:8080/cartuning/js/jquery-3.1.1.min.js"></script>
   <script src="http://localhost:8080/cartuning/js/js.js"></script>
   <link rel="stylesheet" href="http://localhost:8080/cartuning/css/test.css" media="all" /> 
